# hardware-info-rs

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hardware.rs  main.rs
src/components/: Layout.tsx  Row.tsx  Sidebar.tsx
src/pages/: Audio.tsx  Cpu.tsx  Graphics.tsx  Motherboard.tsx  Network.tsx  OperatingSystem.tsx  OpticalDrives.tsx  Peripherals.tsx  Ram.tsx  Storage.tsx  Summary.tsx
