[package]
name = "hardware-info-rs"
version = "0.1.0"
edition = "2021"
description = "Hardware Information Dashboard - Rust/Tauri desktop system inspector"
authors = ["DreamArchers"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"



[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
